# kishin-api

./: .coverage  .gitignore  AGENTS.md  README.md  database_schema.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
kishin_trails/: 21804056192_ACTIVITY.fit  __init__.py  auth.py  cache.py  config.py  database.py  dependencies.py  main.py  models.py  noise.py  noise_cache.py  noise_cache_sqlite.py  overpass.py  perlin.py  poi.py  schemas.py  security.py  tmp.py  trails.py  utils.py
scripts/: debug_geo.py  find_perlin_params.py  import_gpx.py  perlin_config.json  populate_cache.py
src/: activity_21804056192.gpx  overpass.py  tmp.py
test/: conftest.py  test_overpass.py  test_poi.py  test_security.py  test_utils.py
tests/: conftest.py  test_cache_idempotency.py  test_noise.py  test_noise_cache.py  test_noise_cache_sqlite.py  test_overpass.py  test_perlin.py  test_poi.py  test_trails.py
